=== 1.5.0 (TBD)

=== 1.4.0 (2012-10-16)
* PostgreSQL configuration updates for 9.2.x (RHEL only)
* Add support for build, deploy, configure of Apache Qpid for which
  stock RPMs are not available on Amazon Linux. This includes corosync
  build for a working cluster setup on EC2.
* Add :succeed option to RHEL.dist_install (for local RPM files that
  may already be installed)

=== 1.3.0 (2012-10-4)
* Include RHEL/Amazon Linux Postgresql 9.1 config and deploy support
  and reorganize for Ubuntu support as well. Default deploy data dir
  is now /pg/data which makes sense for an EBS mount. Config is
  further tuned for EBS.  PostgreSQL::EC2 has been dropped.
  PostgreSQL::RHEL and PostgreSQL::Ubuntu are auto-included with
  PostgreSQL module if RHEL or Ubuntu is included.
* For performance on relatively slow virtual hosts, only check
  iyyov_install if iyyov_install_jobs( :install => true )
* Add generic etc/gemrc and jruby_install_gemrc (incl in jruby_install)
* Include jstat in list of java command symlinks with java_install
* EC2.ec2_reformat_mnt_as_ext is for ephemoral not EBS, rename
  attribute to ec2_es_device

=== 1.2.1 (2012-9-25)
* Build hashdot with java 1.7.0_07 as well
* Fix lib jruby link on update: --no-dereference

=== 1.2.0 (2012-9-25)
* Touch jobs.rb if not otherwise modified by iyyov_install_jobs. This
  notifies iyyov to restart a daemon when the jobs.rb is otherwise
  unchanged (and using a daemon version range.)
* Upgrade to JRuby 1.6.8 (default)
* Upgrade to Iyyov 1.1.4 (default, in init.d/iyyov)
* Upgrade to java 1.7.0_07

=== 1.1.0 (2012-9-13)
* Add (boxed-)geminabox provisions and deploy task
* Upgrade to (default) jdk-ora-1.7.0_05-x64
* RHEL version of test Rakefile, init.d/iyyov
* Fix RHEL yum args
* Silence user_exist? id command output
* iyyov_install_rundir as user_run

=== 1.0.0 (2012-7-15)
* Initial release.